[package]
name = "depo-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
chromiumoxide = { version = "0.7.0", features = ["async-std-runtime"] }
async-std = { version = "1.12", features = ["attributes"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"